[metadata]
name = bootstraparse
description = A custom markdown parser for Bootstrap & Python
author = Vkyfox
version = 1.0.1
license = Mozilla Public License Version 2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    bootstraparse
    bootstraparse.modules
install_requires =
    pyyaml>=6.0
python_requires = >=3.6
package_dir =
    =src

zip_safe = no

[options.packages.find]
where =
    = src
    = src/bootstraparse

[options.extras_require]
testing =
    flake8>=4.0.1
    tox>=3.24.3
    pytest>=6.2.5
    pytest-cov>=2.12.1
    mypy>==0.910
    pyyaml>=6.0

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160